<resources>
    <string name="app_name">Burparking</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="direcci_n">Dirección</string>
    <string name="a_donde_quieres_ir">¿A dónde quieres ir?</string>
    <string name="openarrow">openArrow</string>
    <string name="leyenda">leyenda</string>
    <string name="ba_os">Baños</string>
    <string name="tienda_bicicletas">Tienda bicicletas</string>
    <string name="cafeter_a">Cafetería</string>
    <string name="cervecer_a">Cervecería</string>
    <string name="pub">Pub</string>
    <string name="fuente">Fuente</string>
    <string name="title_activity_incidencia">IncidenciaActivity</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="a_d_nde_quieres_ir">¿A dónde quieres ir?</string>
    <string name="capacidad">Capacidad</string>
    <string name="ir">Ir</string>
    <string name="close_button">close button</string>
    <string name="imagenusuario">ImagenUsuario</string>
    <string name="incidencia">Incidencia</string>
    <string name="tipo_de_incidencia">Tipo de incidencia</string>
    <string name="descripci_n">Descripción</string>
    <string name="enviar">Enviar</string>

</resources>