<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mapLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.MapFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:clickable="true"
        android:contentDescription="@string/leyenda"
        android:focusable="true"
        app:tint="@color/white"
        android:src="@drawable/ic_information_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/leyendaCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:visibility="gone"
        app:cardCornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="@id/floatingActionButton"
        app:layout_constraintTop_toBottomOf="@id/floatingActionButton"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/ba_os"
                android:textAlignment="textEnd"
                android:textColor="@color/texto"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/toilet" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/tienda_bicicletas"
                android:textAlignment="textEnd"
                android:textColor="@color/texto"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/tienda_bicicleta" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingStart="10dp"
                android:text="@string/cafeter_a"
                android:textAlignment="textEnd"
                android:textColor="@color/texto"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/taza" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/pub"
                android:textAlignment="textEnd"
                android:textColor="@color/texto"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/birra" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/fuente"
                android:textAlignment="textEnd"
                android:textColor="@color/texto"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/fuente" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardParking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        app:cardCornerRadius="0dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/LayoutInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/map"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tvDireccionMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/texto"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Calle Federico Olmeda 10" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Capacidad"
                android:textColor="@color/texto"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/tvCapacidadMap"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDireccionMap" />

            <TextView
                android:id="@+id/tvCapacidadMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/texto"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                tools:text="8" />

            <Button
                android:id="@+id/buttonIrMap"
                style="?attr/materialButtonOutlinedStyle"
                android:backgroundTint="@color/verdeClaro"
                app:shapeAppearance="?attr/shapeAppearanceLargeComponent"
                app:strokeColor="@color/verdeClaro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="Ir"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/be_vietnam_light"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <ImageView
                android:id="@+id/buttonClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_close_outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="#000000"
                android:contentDescription="TODO" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </org.osmdroid.views.MapView>


</androidx.constraintlayout.widget.ConstraintLayout>